// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Project /> should render left 1`] = `
<div>
  <div
    class="projectCard"
  >
    <a
      class="imageContainer imageContainer"
      href="https://www.falabella.com/falabella-cl/"
      rel="noreferrer noopener"
      target="_blank"
    >
      <span
        style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      >
        <img
          alt="falabella.png"
          data-nimg="fill"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
        />
        <noscript />
      </span>
    </a>
    <h2
      class="projectName projectName"
    >
      Falabella
    </h2>
    <div
      class="projectDescriptionContainer projectDescriptionContainer"
    >
      <p
        class="projectDescription"
      >
        A/B Tester de la plataforma. Desarrollo nuevas versiones de la página y comparo la antigua versión con la nueva para recolectar datos y así desplegar la que obtenga mejores resultados.
      </p>
    </div>
    <span
      class="projectTechnologies projectTechnologies"
    >
      HTML, CSS, JavaScript, React.js, Next.js, TypeScript, Dinamic Yield, Adobe Experience Data Collection
    </span>
    <div
      class="linksContainer linksContainer"
    >
      <a
        class="linkWebsite"
        href="https://www.falabella.com/falabella-cl/"
        rel="noreferrer noopener"
        target="_blank"
      />
      <a
        class="linkGithub"
        href="https://github.com/BastianParedes/falabella"
        rel="noreferrer noopener"
        target="_blank"
      />
    </div>
  </div>
</div>
`;

exports[`<Project /> should render right 1`] = `
<div>
  <div
    class="projectCard"
  >
    <a
      class="imageContainer imageContainer"
      href="https://www.falabella.com/falabella-cl/"
      rel="noreferrer noopener"
      target="_blank"
    >
      <span
        style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      >
        <img
          alt="falabella.png"
          data-nimg="fill"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
        />
        <noscript />
      </span>
    </a>
    <h2
      class="projectName projectName"
    >
      Falabella
    </h2>
    <div
      class="projectDescriptionContainer projectDescriptionContainer"
    >
      <p
        class="projectDescription"
      >
        A/B Tester de la plataforma. Desarrollo nuevas versiones de la página y comparo la antigua versión con la nueva para recolectar datos y así desplegar la que obtenga mejores resultados.
      </p>
    </div>
    <span
      class="projectTechnologies projectTechnologies"
    >
      HTML, CSS, JavaScript, React.js, Next.js, TypeScript, Dinamic Yield, Adobe Experience Data Collection
    </span>
    <div
      class="linksContainer linksContainer"
    >
      <a
        class="linkWebsite"
        href="https://www.falabella.com/falabella-cl/"
        rel="noreferrer noopener"
        target="_blank"
      />
      <a
        class="linkGithub"
        href="https://github.com/BastianParedes/falabella"
        rel="noreferrer noopener"
        target="_blank"
      />
    </div>
  </div>
</div>
`;

exports[`<Project /> should render without github 1`] = `
<div>
  <div
    class="projectCard"
  >
    <a
      class="imageContainer imageContainer"
      href="https://www.falabella.com/falabella-cl/"
      rel="noreferrer noopener"
      target="_blank"
    >
      <span
        style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      >
        <img
          alt="falabella.png"
          data-nimg="fill"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
        />
        <noscript />
      </span>
    </a>
    <h2
      class="projectName projectName"
    >
      Falabella
    </h2>
    <div
      class="projectDescriptionContainer projectDescriptionContainer"
    >
      <p
        class="projectDescription"
      >
        A/B Tester de la plataforma. Desarrollo nuevas versiones de la página y comparo la antigua versión con la nueva para recolectar datos y así desplegar la que obtenga mejores resultados.
      </p>
    </div>
    <span
      class="projectTechnologies projectTechnologies"
    >
      HTML, CSS, JavaScript, React.js, Next.js, TypeScript, Dinamic Yield, Adobe Experience Data Collection
    </span>
    <div
      class="linksContainer linksContainer"
    >
      <a
        class="linkWebsite"
        href="https://www.falabella.com/falabella-cl/"
        rel="noreferrer noopener"
        target="_blank"
      />
    </div>
  </div>
</div>
`;

exports[`<Project /> should render without image 1`] = `
<div>
  <div
    class="projectCard"
  >
    <a
      class="imageContainer imageContainer"
      href="https://www.falabella.com/falabella-cl/"
      rel="noreferrer noopener"
      target="_blank"
    />
    <h2
      class="projectName projectName"
    >
      Falabella
    </h2>
    <div
      class="projectDescriptionContainer projectDescriptionContainer"
    >
      <p
        class="projectDescription"
      >
        A/B Tester de la plataforma. Desarrollo nuevas versiones de la página y comparo la antigua versión con la nueva para recolectar datos y así desplegar la que obtenga mejores resultados.
      </p>
    </div>
    <span
      class="projectTechnologies projectTechnologies"
    >
      HTML, CSS, JavaScript, React.js, Next.js, TypeScript, Dinamic Yield, Adobe Experience Data Collection
    </span>
    <div
      class="linksContainer linksContainer"
    >
      <a
        class="linkWebsite"
        href="https://www.falabella.com/falabella-cl/"
        rel="noreferrer noopener"
        target="_blank"
      />
      <a
        class="linkGithub"
        href="https://github.com/BastianParedes/falabella"
        rel="noreferrer noopener"
        target="_blank"
      />
    </div>
  </div>
</div>
`;

exports[`<Project /> should render without link 1`] = `
<div>
  <div
    class="projectCard"
  >
    <div
      class="imageContainer imageContainer"
    >
      <span
        style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      >
        <img
          alt="falabella.png"
          data-nimg="fill"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
        />
        <noscript />
      </span>
    </div>
    <h2
      class="projectName projectName"
    >
      Falabella
    </h2>
    <div
      class="projectDescriptionContainer projectDescriptionContainer"
    >
      <p
        class="projectDescription"
      >
        A/B Tester de la plataforma. Desarrollo nuevas versiones de la página y comparo la antigua versión con la nueva para recolectar datos y así desplegar la que obtenga mejores resultados.
      </p>
    </div>
    <span
      class="projectTechnologies projectTechnologies"
    >
      HTML, CSS, JavaScript, React.js, Next.js, TypeScript, Dinamic Yield, Adobe Experience Data Collection
    </span>
    <div
      class="linksContainer linksContainer"
    >
      <a
        class="linkGithub"
        href="https://github.com/BastianParedes/falabella"
        rel="noreferrer noopener"
        target="_blank"
      />
    </div>
  </div>
</div>
`;

exports[`<Project /> should render without link nor github 1`] = `
<div>
  <div
    class="projectCard"
  >
    <div
      class="imageContainer imageContainer"
    >
      <span
        style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
      >
        <img
          alt="falabella.png"
          data-nimg="fill"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: contain;"
        />
        <noscript />
      </span>
    </div>
    <h2
      class="projectName projectName"
    >
      Falabella
    </h2>
    <div
      class="projectDescriptionContainer projectDescriptionContainer"
    >
      <p
        class="projectDescription"
      >
        A/B Tester de la plataforma. Desarrollo nuevas versiones de la página y comparo la antigua versión con la nueva para recolectar datos y así desplegar la que obtenga mejores resultados.
      </p>
    </div>
    <span
      class="projectTechnologies projectTechnologies"
    >
      HTML, CSS, JavaScript, React.js, Next.js, TypeScript, Dinamic Yield, Adobe Experience Data Collection
    </span>
    <div
      class="linksContainer linksContainer"
    />
  </div>
</div>
`;
